--- a/src/app/places/offers/offer-booking/offer-booking.page.html
+++ b/src/app/places/offers/offer-booking/offer-booking.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/places/offers">
+      </ion-back-button>
+    </ion-buttons>
     <ion-title>offer-booking</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content *ngIf="offerId">
+  <ion-button color="primary" [routerLink]="['/','palces','offers','edit', offerId]"> Edit</ion-button>
 </ion-content>
