--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -1,9 +1,34 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>offers</ion-title>
+    <ion-title>Offers</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button routerLink="new-offer">
+        <ion-icon name="add" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-card size="12" size-xm="8" offset-sm="2">
+          <ion-list>
+            <ion-item *ngFor="let offer of offers">
+              <div [routerLink]="['/' , 'places' , 'offers' , offer.id]">
+                <ion-thumbnail slot="start">
+                  <ion-img [src]="offer.imageUrl"></ion-img>
+                </ion-thumbnail>
+                <ion-label>
+                  <h1>{{offer.title}} </h1>
+                </ion-label>
+              </div>
+            </ion-item>
+          </ion-list>
 
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
