new routes have been added + side menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,39 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>
+          MyIonic
+        </ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle>
+
+          <ion-item lines="none" routerLink="/places/discover" button>
+            <ion-icon name="business" slot="start">
+            </ion-icon>
+            <ion-label>Discover places</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item lines="none" routerLink="/bookings" button>
+            <ion-icon name="checkbox-outline" slot="start">
+            </ion-icon>
+            <ion-label>your bookings places</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+
+          <ion-item lines="none" button>
+            <ion-icon name="exit" slot="start">
+            </ion-icon>
+            <ion-label>logout</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet main></ion-router-outlet>
 </ion-app>
