swiping + modalCtrl have been added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         </ion-menu-toggle>
         <ion-menu-toggle>
 
-          <ion-item lines="none" button>
+          <ion-item lines="none" button (click)="logout()">
             <ion-icon name="exit" slot="start">
             </ion-icon>
             <ion-label>logout</ion-label>
