--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,5 +5,9 @@
 </ion-header>
 
 <ion-content>
+  <ion-item>
+    <ion-label position="floating">E-mail</ion-label>
+    <ion-input></ion-input>
+  </ion-item>
   <ion-button color="primary" (click)="login()">login </ion-button>
 </ion-content>
