--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -8,5 +8,18 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+    <ion-row align-item-center justify-content-center>
+      <ion-col size="4" offset="2">
+        row 1 col1
+      </ion-col>
+      <ion-col size="4">
+        row 1 col2
+      </ion-col>
 
+
+    </ion-row>
+    <ion-row>
+    </ion-row>
+  </ion-grid>
 </ion-content>
