--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,9 +5,14 @@
 </ion-header>
 
 <ion-content>
-  <ion-item>
-    <ion-label position="floating">E-mail</ion-label>
-    <ion-input></ion-input>
-  </ion-item>
+  <ion-list>
+    <ion-item>
+      <ion-label position="floating">E-mail</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+  </ion-list>
   <ion-button color="primary" (click)="login()">login </ion-button>
+  <!-- <div class="theDiv">
+    <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+  </div> -->
 </ion-content>
