--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -8,25 +8,48 @@
 </ion-header>
 
 <ion-content>
+  <ion-segment value="allPlaces" (ionChange)="onFilter($event)">
+    <ion-segment-button value="allPlaces">
+      All places
+    </ion-segment-button>
+    <ion-segment-button value="Bookable">
+      Bookable places
+    </ion-segment-button>
+  </ion-segment>
   <ion-grid>
-    <ion-row *ngFor="let place of places">
-      <ion-col size="12" size-sm="8" offset-sm="2" text-center>
+    <ion-row>
+      <ion-col>
         <ion-card>
           <ion-card-header>
-            <ion-card-title>{{place.title}}</ion-card-title>
-            <ion-card-title>{{place.price | currency}}/Night</ion-card-title>
+            <ion-card-title>{{places[0].title}}</ion-card-title>
+            <ion-card-title>{{places[0].price | currency}}/Night</ion-card-title>
           </ion-card-header>
-          <ion-img [src]="place.imageUrl"></ion-img>
+          <ion-img [src]="places[0].imageUrl"></ion-img>
           <ion-card-content justify-content-center>
             <p>
-              <ion-label color="red">{{place.description}} </ion-label>
+              <ion-label color="red">{{places[0].description}} </ion-label>
             </p>
           </ion-card-content>
           <div>
-            <ion-button fill="clear" color="primary" [routerLink]="['/' , 'places', 'discover'  ,place.id ]">
+            <ion-button fill="clear" color="primary" [routerLink]="['/' , 'places', 'discover'  ,places[0].id ]">
               More</ion-button>
           </div>
         </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" text-center>
+        <ion-virtual-scroll [items]="placesToBeLoad" approxItemHeight="70px">
+          <ion-item [routerLink]="['/' , 'places', 'discover'  ,place.id ]" *virtualItem="let place">
+            <ion-thumbnail slot="start">
+              <ion-img [src]="place.imageUrl"></ion-img>
+            </ion-thumbnail>
+            <ion-label>
+              <h2>{{place.title}}</h2>
+              <p>{{place.description}}</p>
+            </ion-label>
+          </ion-item>
+        </ion-virtual-scroll>
       </ion-col>
     </ion-row>
   </ion-grid>
