--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -1,6 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>new-offer</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onCreateOffer()">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+
+      </ion-button>
+    </ion-buttons>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/offers"></ion-back-button>
     </ion-buttons>
@@ -9,17 +15,49 @@
 
 <ion-content>
   <ion-grid>
-    <ion-row align-item-center justify-content-center>
-      <ion-col size="4" offset="2">
-        row 1 col1
-      </ion-col>
-      <ion-col size="4">
-        row 1 col2
-      </ion-col>
+    <ion-row>
+      <ion-col size-sm="6" offset="3">
+        <ion-item>
+          <ion-label position="floating">Title</ion-label>
+          <ion-input type="text" autocomplete autocorrect></ion-input>
+        </ion-item>
 
-
+      </ion-col>
     </ion-row>
     <ion-row>
+      <ion-col size-sm="6" offset="3">
+        <ion-item>
+          <ion-label position="floating">Description</ion-label>
+          <ion-textarea rows="3"></ion-textarea>
+        </ion-item>
+      </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset="3">
+        <ion-item>
+          <ion-label position="floating">price</ion-label>
+          <ion-input type="number"></ion-input>
+        </ion-item>
+
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="3" offset="3">
+        <ion-item>
+          <ion-label position="floating">Available from</ion-label>
+          <ion-datetime min="2020-01-01" max="2020-12-31"></ion-datetime>
+        </ion-item>
+
+      </ion-col>
+      <ion-col size-sm="3" offset="3">
+        <ion-item>
+          <ion-label position="floating">Available to</ion-label>
+          <ion-datetime min="2020-01-02" max="2020-12-31"></ion-datetime>
+        </ion-item>
+
+      </ion-col>
+    </ion-row>
+
   </ion-grid>
 </ion-content>
