--- a/src/app/bookings/create-booking/create-booking.component.html
+++ b/src/app/bookings/create-booking/create-booking.component.html
@@ -11,6 +11,59 @@
 </ion-header>
 
 <ion-content>
-  <p>{{selectedPlace.description}}</p>
-  <ion-button color="primary" (click)="onBook()">Book</ion-button>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">First Name</ion-label>
+          <ion-input type="text" ngModel name="firstName" required></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Last Name</ion-label>
+          <ion-input type="text" ngModel name="lastName" required></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Number of Guests</ion-label>
+          <ion-select [ngModel]="'2'" name="guestNumber">
+            <ion-select-option value="1">1</ion-select-option>
+            <ion-select-option value="2">2</ion-select-option>
+            <ion-select-option value="3">3</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="3" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">From</ion-label>
+          <ion-datetime display-format="MMM DD YYY" pickerFormat="YY MMM DD"
+            [min]="selectedPlace.availableFrom.toISOString()" [max]="selectedPlace.availableTo.toISOString()" ngModel
+            name="date-from" required #startDateCtrl="ngModel">
+          </ion-datetime>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="3">
+        <ion-item>
+          <ion-label position="floating">To</ion-label>
+          <ion-datetime display-format="MMM DD YYY" pickerFormat="YY MMM DD" [min]="startDateCtrl.value.toISOString()"
+            [max]="selectedPlace.availableTo.toISOString()" ngModel name="date-to" required> </ion-datetime>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-button color="primary" (click)="onBook()" expand="block" type="submit">Book</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
