--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -1,14 +1,42 @@
 <ion-header>
-  <ion-toolbar *ngIf="place">
-    {{place.id}}
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button [defaultHref]="'/places/offers/'+ place.id">
       </ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot="primary">
+      <ion-button (click)="submitEditForm()" [disabled]="!editForm.valid">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title>edit-offer</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <form [formGroup]="editForm">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset="3">
+          <ion-item>
+            <ion-label position="floating">Title</ion-label>
+            <ion-input type="text" autocomplete autocorrect formControlName="title"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset="3">
+          <ion-item>
+            <ion-label position="floating">Description</ion-label>
+            <ion-textarea rows="3" formControlName="description"></ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!editForm.get('description').valid && editForm.get('description').touched">
+        <ion-col size-sm="6" offset="3">
+          <p>description ust not be pmore than 180 characters</p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
