--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>new-offer</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onCreateOffer()">
+      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
 
       </ion-button>
@@ -14,50 +14,56 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size-sm="6" offset="3">
-        <ion-item>
-          <ion-label position="floating">Title</ion-label>
-          <ion-input type="text" autocomplete autocorrect></ion-input>
-        </ion-item>
+  <form [formGroup]="form">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset="3">
+          <ion-item>
+            <ion-label position="floating">Title</ion-label>
+            <ion-input type="text" autocomplete autocorrect formControlName="title"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset="3">
+          <ion-item>
+            <ion-label position="floating">Description</ion-label>
+            <ion-textarea rows="3" formControlName="description"></ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!form.get('description').valid && form.get('description').touched">
+        <ion-col size-sm="6" offset="3">
+          <p>description ust not be pmore than 180 characters</p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset="3">
+          <ion-item>
+            <ion-label position="floating">price</ion-label>
+            <ion-input type="number" formControlName="price"></ion-input>
+          </ion-item>
 
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size-sm="6" offset="3">
-        <ion-item>
-          <ion-label position="floating">Description</ion-label>
-          <ion-textarea rows="3"></ion-textarea>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size-sm="6" offset="3">
-        <ion-item>
-          <ion-label position="floating">price</ion-label>
-          <ion-input type="number"></ion-input>
-        </ion-item>
+        </ion-col>
+      </ion-row>
 
-      </ion-col>
-    </ion-row>
+      <ion-row>
+        <ion-col size-sm="3" offset="3">
+          <ion-item>
+            <ion-label position="floating">Available from</ion-label>
+            <ion-datetime min="2020-01-01" max="2020-12-31" formControlName="dateFrom"></ion-datetime>
+          </ion-item>
 
-    <ion-row>
-      <ion-col size-sm="3" offset="3">
-        <ion-item>
-          <ion-label position="floating">Available from</ion-label>
-          <ion-datetime min="2020-01-01" max="2020-12-31"></ion-datetime>
-        </ion-item>
+        </ion-col>
+        <ion-col size-sm="3" offset="3">
+          <ion-item>
+            <ion-label position="floating">Available to</ion-label>
+            <ion-datetime min="2020-01-02" max="2020-12-31" formControlName="dateTo"></ion-datetime>
+          </ion-item>
 
-      </ion-col>
-      <ion-col size-sm="3" offset="3">
-        <ion-item>
-          <ion-label position="floating">Available to</ion-label>
-          <ion-datetime min="2020-01-02" max="2020-12-31"></ion-datetime>
-        </ion-item>
+        </ion-col>
+      </ion-row>
 
-      </ion-col>
-    </ion-row>
-
-  </ion-grid>
+    </ion-grid>
+  </form>
 </ion-content>
