--- a/src/app/places/discover/place-details/place-details.page.html
+++ b/src/app/places/discover/place-details/place-details.page.html
@@ -5,20 +5,28 @@
 
       </ion-back-button>
     </ion-buttons>
-    <ion-title>place-details</ion-title>
+    <ion-title>{{thePlace.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card *ngIf="thePlace">
-    <ion-card-header>
-      <ion-card-title>{{thePlace.title}}</ion-card-title>
-      <ion-card-title>{{thePlace.price | currency}}/Night</ion-card-title>
-    </ion-card-header>
-    <ion-img [src]="thePlace.imageUrl"></ion-img>
-    <ion-card-content>
-      <p>{{thePlace.description}}</p>
-    </ion-card-content>
-  </ion-card>
-  <ion-button color="primary" (click)="bookPlace()">Book</ion-button>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-img [src]="thePlace.imageUrl"></ion-img>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <p>{{thePlace.description}}</p>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="isBookable">
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-button color="primary" (click)="bookPlace()">Book</ion-button>
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
