--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -16,14 +16,15 @@
       Bookable places
     </ion-segment-button>
   </ion-segment>
-  <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length === 0">
+  <ion-spinner *ngIf="loading" color="primary"></ion-spinner>
+  <ion-grid *ngIf=" !loading && (!relevantPlaces || relevantPlaces.length === 0)">
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
         <p>there are no bookable places at the moment</p>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid *ngIf="relevantPlaces.length > 0">
+  <ion-grid *ngIf="relevantPlaces.length > 0 && !loading">
     <ion-row>
       <ion-col>
         <ion-card>
