--- a/src/app/places/discover/place-details/place-details.page.html
+++ b/src/app/places/discover/place-details/place-details.page.html
@@ -5,11 +5,11 @@
 
       </ion-back-button>
     </ion-buttons>
-    <ion-title>{{thePlace.title}}</ion-title>
+    <ion-title *ngIf="thePlace">{{thePlace.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="thePlace">
   <ion-grid>
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
