--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button [defaultHref]="'/places/offers/'+ place.id">
+      <ion-back-button [defaultHref]="'/places/offers/'+ placeId">
       </ion-back-button>
     </ion-buttons>
     <ion-buttons slot="primary">
-      <ion-button (click)="submitEditForm()" [disabled]="!editForm.valid">
+      <ion-button (click)="submitEditForm()" [disabled]="!editForm?.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -14,7 +14,10 @@
 </ion-header>
 
 <ion-content>
-  <form [formGroup]="editForm">
+  <div *ngIf="loading">
+    <ion-spinner color="primary"></ion-spinner>
+  </div>
+  <form [formGroup]="editForm" *ngIf="!loading">
     <ion-grid>
       <ion-row>
         <ion-col size-sm="6" offset="3">
