--- a/src/app/places/offers/offer-item/offer-item.component.html
+++ b/src/app/places/offers/offer-item/offer-item.component.html
@@ -1,4 +1,4 @@
-<ion-item [routerLink]="['/' , 'places' , 'offers' , offer.id]">
+<ion-item>
 
   <ion-thumbnail slot="start">
     <ion-img [src]="offer.imageUrl"></ion-img>
