now camera can be used in browser

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,22 @@
             <ion-label>logout</ion-label>
           </ion-item>
         </ion-menu-toggle>
+        <ion-menu-toggle>
+
+          <ion-item lines="none" routerLink="/places/location" button>
+            <ion-icon name="location" slot="start">
+            </ion-icon>
+            <ion-label>take my location</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+
+          <ion-item lines="none" routerLink="/places/image-picker" button>
+            <ion-icon name="exit" slot="start">
+            </ion-icon>
+            <ion-label>go to image picker</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
