--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>new-offer</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid">
+      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid || !form.get('image').value">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
 
       </ion-button>
@@ -66,4 +66,21 @@
 
     </ion-grid>
   </form>
+
+
+
+  <div>
+
+    <ion-img class="image" role="button" [src]="selectedImage" *ngIf="selectedImage">
+    </ion-img>
+    <ion-button color="primary" (click)="onPickImage()">
+      <ion-icon name="camera" slot="start"></ion-icon>
+      <ion-label>Take a Picture</ion-label>
+    </ion-button>
+    <ion-img [src]="takenImage" *ngIf="takenImage"></ion-img>
+
+    <input type="file" accept="image/jpeg" *ngIf="userPicker" #filePicker (change)="onFileChosen($event)" />
+
+  </div>
+
 </ion-content>
