fixed the image taking functions

--- a/src/app/places/image-picker/image-picker.page.html
+++ b/src/app/places/image-picker/image-picker.page.html
@@ -8,4 +8,6 @@
   </ion-button>
   <ion-img [src]="takenImage" *ngIf="takenImage"></ion-img>
 
+  <input type="file" *ngIf="userPicker" #filePicker (change)="onFileChosen($event)" />
+
 </div>
